@@ -49,6 +49,9 @@
     }, {
         "name": "Radek / rsmogura",
         "email": ""
+    },{
+        "name": "LiaoTzukai",
+        "email": "liaotzukai@gmail.com"
     }],
     "version": "1.9.4-23",
     "homepage": "http://www.totaljs.com",
